<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/leader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/leader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/player"
        app:layout_constraintRight_toLeftOf="@+id/record"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.200"
        app:layout_constraintVertical_bias="0.100" />

    <Button
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/record"
        android:text="Gravar"
        android:onClick="record"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintLeft_toRightOf="@+id/leader"
        app:layout_constraintRight_toLeftOf="@+id/listen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100" />

    <Button
        android:id="@+id/listen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/listen"
        android:text="Ouvir"
        android:onClick="play"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.700"
        app:layout_constraintLeft_toRightOf="@+id/record"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100" />

    <TextView
        android:id="@+id/player"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="start"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/leader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.000"
        app:layout_constraintVertical_bias="0.100" />

</android.support.constraint.ConstraintLayout>
